--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "src/app.ts",
   "scripts": {
-    "build": "build/ && tsc",
-    "start": "node build/app.ts",
+    "build": "rm -rf build/ && tsc",
+    "start": "node build/app.js",
     "dev": "nodemon"
   },
   "repository": {
@@ -20,7 +20,6 @@
   "homepage": "https://github.com/LeCarteloo/Mug-Task#readme",
   "devDependencies": {
     "@types/express": "^4.17.14",
-    "@types/pino": "^7.0.5",
     "typescript": "^4.8.4"
   },
   "dependencies": {
